projects/vb6parse/snapshots/parsers/cst/library/environment/getautoserversettings/getautoserversettings_min_comparison.snap
---
source: projects/vb6parse/tests/library/environment/getautoserversettings.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: IfStatement
      children:
        - kind: IfKeyword
          text: If
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: GetAutoServerSettings
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: progID
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: clsID
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: serverName
                - kind: RightParenthesis
                  text: )
            - kind: Whitespace
              text: " "
            - kind: LessThanOperator
              text: "<"
            - kind: Whitespace
              text: " "
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: minSettings
        - kind: Whitespace
          text: " "
        - kind: ThenKeyword
          text: Then
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: minSettings
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: GetAutoServerSettings
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: progID
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: clsID
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: serverName
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: IfKeyword
          text: If
